--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap');
-
 *, *::before, *::after {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
