small improvements to overall code quality

--- a/static/style.css
+++ b/static/style.css
@@ -12,5 +12,5 @@ body {
     justify-content: center;
     background: #111;
     color: white;
-    font-family: 'Poppins', 'Noto Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
