--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,11 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
+    margin: 0;
+}
+
+.app {
     margin: 0;
     width: 100%;
     min-height: 100vh;
