--- a/static/style.css
+++ b/static/style.css
@@ -23,3 +23,28 @@ body {
     margin: 0;
     color: var(--main-text-color);
 }
+
+button {
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: var(--secondary-text-color);
+    cursor: pointer;
+    background: var(--button-inactive-color);
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    transition: background 0.2s ease;
+
+    z-index: 1;
+}
+
+button:hover {
+    background: var(--button-hover-color);
+    color: var(--main-text-color);
+}
+
+button.selected {
+    background: var(--button-active-color);
+    color: var(--main-text-color);
+}
