Big changes - restructured project - changes to weather forecast - looks better now - always shows full forecast and centres forecast on that specific session - rain animation disabled for now - probably other changes that i forgot to include

--- a/static/style.css
+++ b/static/style.css
@@ -52,3 +52,13 @@ button.selected {
     background: var(--button-active-color);
     color: var(--main-text-color);
 }
+
+button:disabled {
+    text-decoration: line-through;
+}
+
+button:disabled:hover {
+    cursor: default;
+    background: var(--button-inactive-color);
+    color: var(--secondary-text-color);
+}
