--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,16 @@ button:disabled:hover {
     color: var(--secondary-text-color);
 }
 
+a {
+    color: inherit;
+    text-decoration: inherit;
+    transition: color 0.2s ease;
+}
+
+a:hover {
+    color: var(--button-hover-color);
+}
+
 @media only screen and (max-width: 768px) {
     button {
         font-size: 18px;
